Fix grid styling issue on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,3 @@
-html {
-  scroll-behavior: smooth;
-  overflow-x: hidden;
-}
-
 h1,
 h2,
 h3,
